flatpak: Fix searches

Do not triage away the items that were provided by the appstream pool.

We might be missing important things.
To reproduce the issue: `plasma-discover --backends --search "mozilla
firefox"`

BUG: 504799